# Percepto

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  SampleScene.csv  TASK.md  config.toml  gen_vertices.py
.github/workflows/: ci.yml
benches/: CMakeLists.txt  brute_force.txt  moller_trumbore_benchmarks.cpp  run_scan_full_duration.cpp
benchmark/: CMakeLists.txt  bench_run_scan.cpp
include/percepto/: types.h
include/percepto/common/: config_loader.h  frame_scan.h  types.h
include/percepto/core/: Intersectable.h  Ray.h  RayBuilder.h  config_loader.h  intersectable.h  ray.h  ray_builder.h  scene.h  scene_builder.h  types.h  vec3.h
include/percepto/geometry/: Intersectable.h  Ray.h  RayBuilder.h  Scene.h  Sphere.h  Vec3.h  sphere.h  triangle.h
include/percepto/io/: csv_parser.h  logger.h  parser.h
include/percepto/lidar/: emitter.h  simulator.h
include/percepto/math/: MathUtils.h  math_utils.h
include/percepto/math/intersection/: moller_trumbore.h
include/percepto/sensor/: frame_scan.h  lidar_emitter.h  lidar_simulator.h
scripts/: gen_scene.py
src/: CMakeLists.txt  MathUtils.cpp  main.cpp  math_utils.cpp  parser.cpp
src/core/: Ray.h  RayBuilder.h  Vec3.h  config_loader.cpp  scene.cpp
src/io/: csv_parser.cpp
src/lidar/: emitter.cpp  simulator.cpp
src/math/: math_utils.cpp  moller_trumbore.cpp
src/math/intersection/: moller_trumbore.cpp
src/sensor/: lidar_emitter.cpp  lidar_simulator.cpp
test/: CMakeLists.txt  temp  test_helpers.h
test/core/: test_ray.cpp  test_ray_builder.cpp  test_scene.cpp  test_vec3.cpp
test/geometry/: test_sphere.cpp
test/io/: test_csv_parser.cpp
test/math/: test_math_utils.cpp  test_moller_trumbore.cpp
test/sensor/: test_lidar_simulator.cpp
tests/: CMakeLists.txt  TesRayBuilder.cpp  TestHelpers.h  TestMathUtils.cpp  TestRay.cpp  TestRayBuilder.cpp  TestSphere.cpp  TestVec3.cpp  test_helpers.h
tests/core/: test_ray_builder.cpp  test_vec3.cpp
tests/data/: expected_distances.h  triangles.csv
tests/fixtures/data/: expected_scan_results.h  triangles.csv
tests/integration/: test_lidar_sim.cpp
tests/sensor/: test_lidar_simulator.cpp
tests/unit/core/: test_scene.cpp
tests/unit/geometry/: test_sphere.cpp
tests/unit/io/: test_csv_parser.cpp
tests/unit/math/: test_moller_trumbore.cpp
tests/unit/sensor/: test_lidar_emitter.cpp  test_lidar_simulator.cpp
